--- a/src/main/resources/templates/categoria/fragmentos.html
+++ b/src/main/resources/templates/categoria/fragmentos.html
@@ -20,13 +20,6 @@
                         </button>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-3">   
-                        <a th:href="@{/categoria/nuevo}"
-                               class="btn btn-info">
-                                <i class="fas fa-plus"></i> [[#{accion.nuevo}]]</a>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -78,7 +71,7 @@
                             <div class="card-header">
                                 <h4>[[#{categoria.listado}]]</h4>
                             </div>
-                            <div th:if="${categorias != null and !categorias.empty}">
+                            <div th:if="${categorias != null and !categorias.empty}">  <!-- Th: if lo que está dentro se muestra sólo si cumple la condición dentro de {}$ utiliza elemento de modal -->
                                 <table class="table table-striped table-hover">
                                     <thead class="table-dark">
                                         <tr><th>#</th>
@@ -87,11 +80,11 @@
                                             <th></th></tr>
                                     </thead>
                                     <tbody>
-                                        <tr th:each="categoria, contador : ${categorias}">
+                                        <tr th:each="categoria, contador : ${categorias}"> <-<!-- Por cada item de la lista en este caso "categoria" se va a cumplir lo que está dentro -->
                                             <td>[[${contador.count}]]</td>
                                             <td>[[${categoria.descripcion}]]</td>
                                             <td th:text="${categoria.activo} ? 'Activa' : 'Inactiva'" />
-                                            <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}"
+                                            <td><a th:href="@{/categoria/eliminar/}+${categoria.idCategoria}" 
                                                    class="btn btn-danger">
                                                     <i class="fas fa-trash"></i> [[#{accion.eliminar}]]</a>
                                                 <a th:href="@{/categoria/modificar/}+${categoria.idCategoria}"
@@ -100,7 +93,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="text-center p-2" th:if="${categorias == null or categorias.empty}">
+                            <div class="text-center p-2" th:if="${categorias == null or categorias.empty}"> <!-- Sino cae en este div que valida lo contrario -->
                                 <span>[[#{lista.vacia}]]</span>
                             </div>
                         </div>
@@ -108,8 +101,8 @@
                     <div class="col-md-3">
                         <div class="card text-center bg-success text-white mb-3">
                             <div class="card-body">
-                                <h3>[[#{categoria.total}]]</h3>
-                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalCategorias}]]</h4>
+                                <h3>[[#{categoria.total}]]</h3> <!-- # para utilizar mensajes -->
+                                <h4 class="fs-2"><i class="fas fa-users"></i> [[${totalCategorias}]]</h4> <!-- $ para elementos dentro del modal -->
                             </div>
                         </div>
                     </div>
@@ -194,4 +187,3 @@
         </section>
     </body>
 </html>
-
