--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtmal"
+<html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
-    <head th:replace="layout/plantilla :: head">
-
+    <head th:replace="~{layout/plantilla :: head}">
+        <title>TechShop</title>
     </head>
     <body>
-        <header th:replace="layout/plantilla :: header"/>
+        <header th:replace="~{layout/plantilla :: header}"/>
 
-        <section th:replace="categoria/fragmentos :: botonesAgregar"/>
-        <section th:replace="categoria/fragmentos :: agregarCategoria"/>
-        <section th:replace="categoria/fragmentos :: listadoCategorias"/>
-        
-        <footer th:replace="layout/plantilla :: footer"/>
+        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
+        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
+        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
 
+        <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
