--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -13,6 +13,9 @@
         <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
         <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>
 
+        <!--<p> [[${EmailUsuario}]]</p>
+        
+        
         <footer th:replace="~{layout/plantilla :: footer}"/>
     </body>
 </html>
