--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtmal"
-      xmlns:th="http://www.thymeleaf.org">
-    
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
     <head th:replace="~{layout/plantilla :: head}">
-        
+        <title>TechShop</title>        
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
-        <h1>[[#{aplicacion.titulo}]] </h1>
-        <footer th:replace="~{layout/plantilla :: footer}"/>
-       
+        <section th:replace="~{carrito/fragmentos :: listadoProductos}"/>
+        <footer th:replace="~{layout/plantilla :: footer}"/>          
     </body>
 </html>
